--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -1,89 +1,126 @@
 {
-  "message" : {
-      "sign_in_to_your_account": "Sign in to your account!",
-      "sign_up": "Sign up!",
-      "your_email": "Your email",
-      "password": "Password",
-      "remember_me": "Remember me",
-      "forgot_password": "Forgot password?",
-      "dont_have_an_account_yet": "Don’t have an account yet?",
-      "already_have_an_account": "Already have an account?",
-      "your_username": "Your username",
-      "your_firstname": "Your firstname",
-      "your_lastname": "Your lastname",
-      "confirm_password": "Confirm password",
-      "sign_up_success" : "Signed up successfully!",
-      "sign_in_success" : "Sign in success",
-      "Setup" : "Set up",
-      "empty_table": "Empty table",
-      "submit" : "Submit",
-      "reset" : "Reset",
-      "profile": {
-          "profile": "Profile",
-          "personal_information": "Personal information",
-          "personal_information_message" : "Use a permanent address where you can receive mail.",
-          "username" : "Username",
-          "first_name" : "First name",
-          "last_name" : "Last name",
-          "email" : "Email address",
-          "country": "Country",
-          "address" : "Street address",
-          "state" : "State / province",
-          "city" : "City",
-          "postal_code": "ZIP / Postal code"
+  "message": {
+    "sign_in_to_your_account": "Sign in to your account!",
+    "sign_up": "Sign up!",
+    "your_email": "Your email",
+    "password": "Password",
+    "remember_me": "Remember me",
+    "forgot_password": "Forgot password?",
+    "dont_have_an_account_yet": "Don’t have an account yet?",
+    "already_have_an_account": "Already have an account?",
+    "your_username": "Your username",
+    "your_firstname": "Your firstname",
+    "your_lastname": "Your lastname",
+    "confirm_password": "Confirm password",
+    "sign_up_success": "Signed up successfully!",
+    "sign_in_success": "Sign in success",
+    "Setup": "Set up",
+    "empty_table": "Empty table",
+    "submit": "Submit",
+    "reset": "Reset",
+    "profile": {
+      "profile": "Profile",
+      "personal_information": "Personal information",
+      "personal_information_message": "Use a permanent address where you can receive mail.",
+      "username": "Username",
+      "first_name": "First name",
+      "last_name": "Last name",
+      "email": "Email address",
+      "country": "Country",
+      "address": "Street address",
+      "state": "State / province",
+      "city": "City",
+      "postal_code": "ZIP / Postal code"
+    },
+    "country": {
+      "country": "Country",
+      "countries": "Countries",
+      "statuses": {
+        "deleted": "Deleted",
+        "active": "Active",
+        "inactive": "Inactive"
       },
-      "country": {
-          "country" : "Country",
-          "countries" : "Countries",
-          "statuses": {
-              "deleted": "Deleted",
-              "active": "Active",
-              "inactive": "Inactive"
-          },
-          "create": "Create country",
-          "update": "Update country",
-          "code": "Code",
-          "name": "Name",
-          "status": "Status",
-          "created":{
-            "success": "Country created successfully!",
-            "error": "Country couldn't be created!"
-          },
-          "updated":{
-            "success": "Country updated successfully!",
-            "error": "Country couldn't be updated!"
-          }
+      "create": "Create country",
+      "update": "Update country",
+      "code": "Code",
+      "name": "Name",
+      "status": "Status",
+      "created": {
+        "success": "Country created successfully!",
+        "error": "Country couldn't be created!"
       },
-      "state": {
-        "states": "States",
-        "state": "State",
-        "statuses": {
-          "deleted": "Deleted",
-          "active": "Active",
-          "inactive": "Inactive"
-        },
-        "create": "Create state",
-        "update": "Update state",
-        "code": "Code",
-        "name": "Name",
-        "status": "Status",
-        "country": "Country",
-        "created":{
-          "success": "Stste created successfully!",
-          "error": "State couldn't be created!"
-        },
-        "updated":{
-          "success": "State updated successfully!",
-          "error": "State couldn't be updated!"
-        }
+      "updated": {
+        "success": "Country updated successfully!",
+        "error": "Country couldn't be updated!"
+      }
+    },
+    "state": {
+      "states": "States",
+      "state": "State",
+      "statuses": {
+        "deleted": "Deleted",
+        "active": "Active",
+        "inactive": "Inactive"
       },
-      "Home": "Home",
-      "Countries" : "Countries",
-      "Dashboard" : "Dashbooard"      
+      "create": "Create state",
+      "update": "Update state",
+      "code": "Code",
+      "name": "Name",
+      "status": "Status",
+      "country": "Country",
+      "created": {
+        "success": "Stste created successfully!",
+        "error": "State couldn't be created!"
+      },
+      "updated": {
+        "success": "State updated successfully!",
+        "error": "State couldn't be updated!"
+      }
+    },
+    "Home": "Home",
+    "Countries": "Countries",
+    "Dashboard": "Dashbooard"
+  },
+  "ally": {
+    "allies": "Allies",
+    "ally": "Ally",
+    "statuses": {
+      "deleted": "Deleted",
+      "active": "Active",
+      "inactive": "Inactive"
+    },
+    "create": "Create ally",
+    "update": "Update ally",
+    "code": "Code",
+    "name": "Name",
+    "id": "ID Fiscal",
+    "idFiscal": "ID Físcal",
+    "state": "State",
+    "city": "City",
+    "address": "Addres",
+    "paginaWeb": "Web page",
+    "lastName": "Last name",
+    "cargo": "cargo",
+    "officePhone": "Office phone",
+    "movilPhone": "Movil phone",
+    "email": "Email",
+    "codeClient": "Code client",
+    "date": "Date",
+    "contacts": "Contacts",
+    "referred": "Referred",
+    "activeLicenses": "Nro. Active licenses",
+    "created": {
+      "success": "Ally created successfully!",
+      "error": "Ally couldn't be created!"
+    },
+    "updated": {
+      "success": "Ally updated successfully!",
+      "error": "Ally couldn't be updated!"
+    }
   },
   "validations": {
-        "required": "The field {property} is required.",
-        "minLength": "The {property} field has a value of '{model}', but it must have a min length of {min}.",
-        "maxLength": "The {property} field has a value of '{model}', but it must have a max length of {max}."
-    }
+    "required": "The field {property} is required.",
+    "minLength": "The {property} field has a value of '{model}', but it must have a min length of {min}.",
+    "maxLength": "The {property} field has a value of '{model}', but it must have a max length of {max}."
+  }
 }
