Se crea metodo para listar los registros eliminados, se agrega switch para mostrar los datos segun el estado, se agrega en cada modulo el endpoint para listar los eliminados

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -48,7 +48,8 @@
       "status": "Status",
       "created": {
         "success": "Country created successfully!",
-        "error": "Country couldn't be created!"
+        "error": "Country couldn't be created!",
+        "errorStatus": "¡Country already exists, but it is inactive!"
       },
       "updated": {
         "success": "Country updated successfully!",
